FIX 167032 select width sometimes too small (eg Chrome, with a very small discount unit column)

--- a/skins/default/output-objects.scss
+++ b/skins/default/output-objects.scss
@@ -43,6 +43,10 @@ ol.properties > li.component-objects > div > ul.collection > li {
 			}
 		}
 
+		> select {
+			min-width: 34px;
+		}
+
 		&.float,
 		&.float > div > input,
 		&.integer,
